--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,15 +14,15 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug executable 'advent_of_code_2020'",
+            "name": "Debug executable 'advent_of_code_202x'",
             "cargo": {
                 "args": [
                     "build",
-                    "--bin=advent_of_code_2020",
-                    "--package=advent_of_code_2020"
+                    "--bin=advent_of_code_202x",
+                    "--package=advent_of_code_202x"
                 ],
                 "filter": {
-                    "name": "advent_of_code_2020",
+                    "name": "advent_of_code_202x",
                     "kind": "bin"
                 }
             },
@@ -32,16 +32,16 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug unit tests in executable 'advent_of_code_2020'",
+            "name": "Debug unit tests in executable 'advent_of_code_202x'",
             "cargo": {
                 "args": [
                     "test",
                     "--no-run",
-                    "--bin=advent_of_code_2020",
-                    "--package=advent_of_code_2020"
+                    "--bin=advent_of_code_202x",
+                    "--package=advent_of_code_202x"
                 ],
                 "filter": {
-                    "name": "advent_of_code_2020",
+                    "name": "advent_of_code_202x",
                     "kind": "bin"
                 }
             },
