--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "advent_of_code_2020"
-version = "0.1.0"
+name = "advent_of_code_202x"
+version = "0.2.0"
 authors = ["strank <strank@strank.info>"]
 edition = "2018"
 
