Added a build.rs script to the rust setup, to auto-generate code that loads all puzzle solutions written in rust automatically.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ edition = "2021"
 itertools="0.10"
 ndarray="0.15"
 phf = { version = "0.10", features = ["macros"] }
+
+[build-dependencies]
+glob = "0.3"
