--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 itertools="0.10"
 ndarray="0.15"
 phf = { version = "0.10", features = ["macros"] }
+num = "0.4"
 
 [build-dependencies]
 glob = "0.3"
