--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,10 @@ num = "0.4"
 
 [build-dependencies]
 glob = "0.3"
+
+[dev-dependencies]
+criterion = { version = "0.3", features = ["html_reports"] }
+
+[[bench]]
+name = "criterion_benchmark"
+harness = false
