--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ itertools="0.10"
 ndarray="0.15"
 phf = { version = "0.11.0", features = ["macros"] }
 num = "0.4"
+pathfinding = "3"
+hex = "0.4"
+nom = "7"
 
 [build-dependencies]
 glob = "0.3"
